Conver to jtreg tests
Signed-off-by: Sophia Guo <sophia.gwf@gmail.com>